# patzer-chess

./: README.md  main.py  pyproject.toml
docs/: COACH_IMPLEMENTATION.md
frontend/: index.html
frontend/src/: App.jsx  App.svelte  Board.jsx  Coach.jsx  GameList.jsx  MoveList.jsx  data.jsx
frontend/src/lib/: Board.svelte  Chat.svelte  ErrorPanel.svelte  EvalBar.svelte  GameList.svelte  MoveList.svelte
src/gg_chess/: config.py  db.py
src/gg_chess/analysis/: engine.py  llm.py  move_judge.py  strategic.py  structure.py  tactics.py  teach.py  tools.py
src/gg_chess/coach/: __init__.py  auditor.py  router.py  sanitizer.py  student.py
src/gg_chess/coach/modes/: __init__.py  endgame.py  lesson.py  opening.py  puzzle.py  qa.py  review.py  spar.py
src/gg_chess/ingestion/: chesscom.py
src/gg_chess/probing/: dataset.py
src/gg_chess/retrieval/: __init__.py  openings.py  puzzles.py  tablebase.py
src/gg_chess/web/: __init__.py  routes.py
src/gg_chess/web/static/ui/src/: app.jsx  movelist.jsx
src/patzer/: cli.py  config.py  db.py  player_model.py  themes.py
src/patzer/analysis/: engine.py  strategic.py  structural.py
src/patzer/ingestion/: chesscom.py  lichess.py  parser.py
src/patzer/training/: puzzle_db.py  queue.py  scheduler.py
src/patzer/web/: routes.py
tests/: test_ingestion.py  test_move_judge.py  test_player_model.py  test_scheduler.py  test_structural.py  test_structure.py
